# hello-x-compile

./: CMakeLists.txt  LICENSE  README.md  bbb-debian-10-console.cmake  main.cpp
